k8s/calibre/calibre-base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre-base
  labels:
    app: calibre-base
spec:
  selector:
    app: calibre-base
  ports:
    - name: "desktop-gui"
      protocol: TCP
      targetPort: 8080
      port: 8080
    - name: "webserver-gui"
      protocol: TCP
      targetPort: 8081
      port: 8081
